[package]
name = "kubewatch"
version = "0.9.2"
authors = ["Petr Horáček <phoracek@redhat.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/phoracek/kubewatch"
homepage = "https://github.com/phoracek/kubewatch"
documentation = "https://docs.rs/kubewatch"
description = """
This library serves as a base component for Kubernetes event watching.
"""

[dependencies]
hyper = "0.10"
serde = "0.9"
serde_json = "0.9"

[dev-dependencies]
matches = "0.1"
serde_derive = "0.9"
